vignette data now in inst/extdata
git-svn-id: file:///home/git/hedgehog.fhcrc.org/bioconductor/trunk/madman/Rpacks/SplicingGraphs@82878 bc3139a8-67e5-0310-9ffc-ced21a209358

--- a/vignettes/SplicingGraphs.Rnw
+++ b/vignettes/SplicingGraphs.Rnw
@@ -47,7 +47,7 @@
 
 <<settings,echo=FALSE>>=
 options(width=90)
-.precomputed_results <- system.file("doc", "precomputed_results",
+.precomputed_results <- system.file("extdata",
                                     package="SplicingGraphs", mustWork=TRUE)
 .loadPrecomputed <- function(objname)
 {
