--- a/vignettes/SplicingGraphs.Rnw
+++ b/vignettes/SplicingGraphs.Rnw
@@ -819,12 +819,13 @@ names(bam_files)  # the names of the runs
 @
 
 Another important question about RNA-seq reads is whether they are
-single- or paired-end. This can be checked with the \Rfunction{quickCountBam}
-utility from the \Rpackage{Rsamtools} package:
+single- or paired-end. This can be checked with the
+\Rfunction{quickBamFlagSummary} utility from the \Rpackage{Rsamtools}
+package:
 
-<<quickCountBam>>=
+<<quickBamFlagSummary>>=
 library(Rsamtools)
-quickCountBam(bam_files[1], mainGroupsOnly=TRUE)
+quickBamFlagSummary(bam_files[1], mainGroupsOnly=TRUE)
 @
 
 Doing this for the 8 BAM files confirms that all the reads in the
@@ -932,7 +933,7 @@ in the region of that gene and have at least 1 gap:
 <<load_reads_in_3183_region>>=
 param <- ScanBamParam(flag=flag0, which=range(unlist(sg[["3183"]])))
 reads <- readGAlignmentPairs(bam_files[1], use.names=TRUE, param=param)
-gapped_reads <- reads[ngap(first(reads)) + ngap(last(reads)) != 0L]
+gapped_reads <- reads[njunc(first(reads)) + njunc(last(reads)) != 0L]
 @
 
 and we plot the genomic region chr14:21675000-21702000:
