Rsamtools isNotPrimaryRead re-named isSecondaryAlignment
- additional minor code cleanup


git-svn-id: file:///home/git/hedgehog.fhcrc.org/bioconductor/trunk/madman/Rpacks/SplicingGraphs@97641 bc3139a8-67e5-0310-9ffc-ced21a209358

--- a/vignettes/SplicingGraphs.Rnw
+++ b/vignettes/SplicingGraphs.Rnw
@@ -866,7 +866,7 @@ that we'll pass to \Rfunction{readGAlignmentPairs} (see
 about this):
 
 <<ScanBamParam>>=
-flag0 <- scanBamFlag(isNotPrimaryRead=FALSE,
+flag0 <- scanBamFlag(isSecondaryAlignment=FALSE,
                      isNotPassingQualityControls=FALSE,
                      isDuplicate=FALSE)
 param0 <- ScanBamParam(flag=flag0)
