fix vignette failure caused by update to TxDb.Hsapiens.UCSC.hg19.knownGene
git-svn-id: file:///home/git/hedgehog.fhcrc.org/bioconductor/trunk/madman/Rpacks/SplicingGraphs@107854 bc3139a8-67e5-0310-9ffc-ced21a209358

--- a/vignettes/SplicingGraphs.Rnw
+++ b/vignettes/SplicingGraphs.Rnw
@@ -306,6 +306,11 @@ sg
 ## 'sg@.bubbles_cache'.
 sg_with_bubbles <- .loadPrecomputed("sg_with_bubbles")
 sg@.bubbles_cache <- sg_with_bubbles@.bubbles_cache
+## Replace NAs with FALSE in circularity flag (because having the flag set
+## to NA instead of FALSE (or vice-versa) is not considered a significant
+## difference between the 2 objects).
+isCircular(sg) <- isCircular(sg) %in% TRUE
+isCircular(sg_with_bubbles) <- isCircular(sg_with_bubbles) %in% TRUE
 if (!identical(sg, sg_with_bubbles))
     stop("'sg' is not identical to precomputed version")
 @
